# cch-fastapi-elk

./: docker-compose.yml  mkdocs-sample.yml  test.py
api/: Dockerfile  main.py  pyproject.toml
api/common/: data_manager.py  logger_handler.py
api/router/: index.py
api/schema/: main.py  test.py
api/service/: index.py
docs/: index.md
logstash/pipeline/: logstash.conf
