[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = "FastAPI Test"
authors = ["choi-lion <ckdgus11021@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.10, <3.11"
fastapi = "^0.103.1"
pytest = "^7.4.2"
celery = "^5.3.4"
redis = "^5.0.0"
flower = "^2.0.1"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.12.0"
elasticsearch = "^7.11.1"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1"
logstash = "^0.1.dev0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
